MGDOBR-471: Adjust OpenApi annotations to use ref instead of inline schema
For more details see:
- https://issues.redhat.com/browse/MGDOBR-471
